force-app/main/default/objects/State_Group_Association__c/State_Group_Association__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>State - Public Group Association</label>
</CustomObject>