force-app/main/default/objects/State_Group_Association__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <label>Public Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>