force-app/main/default/objects/State_Group_Association__c/fields/Recalculate__c.field-meta.xml
<CustomField>
    <fullName>Recalculate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Recalculate</label>
    <type>Checkbox</type>
</CustomField>