force-app/main/default/objects/State_Group_Association__c/fields/Volunteer_Program__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Program__c</fullName>
    <label>Volunteer Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>