force-app/main/default/objects/State_Group_Association__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Volunteer_Program__c</columns>
    <columns>State__c</columns>
    <columns>Group_Id__c</columns>
    <columns>Recalculate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>